--- a/views/home.hbs
+++ b/views/home.hbs
@@ -27,6 +27,11 @@
 					<a class="nav-link" href="/logout">logout<span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="/video">video<span class="sr-only">(current)</span></a>
+				</li>
+			</ul>
 		</div>
 	</nav>
 	<div class="container">
@@ -131,6 +136,7 @@
 				$('.vid_desc').find('h1').html(res.title);
 
 				var url = 'title=' + res.title +
+					'&poster=' + res.backdrop_path +
 					'&desc=' + res.overview +
 					'&year=' + res.release_date.substring(0, 4);
 
