--- a/public/stylesheets/video.css
+++ b/public/stylesheets/video.css
@@ -1,6 +1,3 @@
-/* * {
-	transition: 0s;
-} */
 body {
 	background-color: black;
 }
@@ -43,11 +40,6 @@ body {
 	height: 500px;
 }
 
-.vjs-big-play-button {
-	background-color: aqua;
-	border: 0.067em solid #ff9900;
-}
-
 .vid_desc {
 	color: white;
 	top: 3vw;
@@ -56,8 +48,7 @@ body {
 	right: 0;
 	position: relative;
 	align-self: center;
-	height: 480px;
-	/* text-align: center; */
+	height: auto;
 	width: 850px;
 	margin: auto;
 }
