removed video btn

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -19,11 +19,6 @@
 			</ul>
 			<ul class="navbar-nav">
 				<li class="nav-item active">
-					<a class="nav-link" href="/video">video<span class="sr-only">(current)</span></a>
-				</li>
-			</ul>
-			<ul class="navbar-nav">
-				<li class="nav-item active">
 					<a class="nav-link" href="/logout">logout<span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
@@ -135,6 +130,7 @@
 
 		$('#search_form').css({
 			'display': 'none',
+			'transition': '600ms',
 		});
 		$('.head').css({
 			'height': '0px',
