New Poster Design

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -81,6 +81,7 @@
 	function func(e) {
 		var year = $(e).find($('.year')).html(),
 			title = $(e).find($('.movie-title')).html();
+			console.log('------> ' + title);
 		var data = {};
 		data.title = title;
 
