--- a/views/video.hbs
+++ b/views/video.hbs
@@ -33,6 +33,9 @@
 		<p></p>
 	</div>
 </div>
+<div class="footer">
+	<p>Footer</p>
+</div>
 
 <script>
 	var player = videojs('videoPlayer');
@@ -48,6 +51,11 @@
 
 		$('.vid_desc').find('h2').html(query.title);
 		$('.vid_desc').find('p').html(query.desc);
+
+		$('.footer').css({
+			'height': '100%',
+			'transition': '600ms',
+		});
 
 //		Make fullscrenn border 0px;
 
