--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -2,6 +2,16 @@ body {
 	background-color: black;
 }
 
+.footer {
+	height: 150px;
+	background: rgba(255, 171, 46, 0.479);
+	z-index: 2;
+	width: 100%;
+	position:absolute;
+	color: #ffffff;
+	text-align: center;
+}
+
 #search_btn {
 	height: 35px;
     margin-top: 5px;
@@ -198,6 +208,7 @@ a:hover {
 	-ms-flex-pack: center;
 	justify-content: center;
 	padding-top: 70px;
+	padding-bottom: 20px;
 }
 
 .movie-card {
