--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,12 +5,10 @@
 <link rel="stylesheet" href="/stylesheets/home.css">
 <div class="head">
 	<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav"
-		 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<a class="navbar-brand" href="/home"><img src="/images/logo.png" width="30" height="30" class="d-inline-block align-top"
-			 alt=""></a>
+		<a class="navbar-brand" href="/home"><img src="/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
@@ -37,7 +35,7 @@
 			<div class="row">
 				<div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
 					<div class="input-group">
-						<input type="text" class="form-control" placeholder="Search" id="search" name="search"/>
+						<input type="text" class="form-control" placeholder="Search" id="search" name="search" />
 					</div>
 				</div>
 			</div>
@@ -64,16 +62,9 @@
 		<p class="overview"></p>
 	</div>
 </div>
-<div class='player'>
-	<center>
-		<video id="videoPlayer" controls>
-			<source src="http://localhost:8080/video" type="video/mp4">
-  			Your browser does not support the video tag.
-		</video>
-	</center>
-</div>
 <script>
 	var i = 0;
+
 	function makeMovieCall() {
 		var data = {};
 		$.ajax({
@@ -81,12 +72,13 @@
 			data: JSON.stringify(data),
 			contentType: 'application/json',
 			url: '/movie/default',
-			success: function (res) {
+			success: function(res) {
 				// console.log(res);
 				$('.gala').html(res);
 			}
 		});
 	}
+
 	function func(e) {
 		var year = $(e).find($('.year')).html(),
 			title = $(e).find($('.movie-title')).html();
@@ -99,7 +91,7 @@
 			data: JSON.stringify(data),
 			contentType: 'application/json',
 			url: '/movie/info',
-			success: function (res) {
+			success: function(res) {
 				console.log(res);
 
 				$('.box').css({
@@ -122,9 +114,9 @@
 				$('.vid_desc').find('h1').html(res.title);
 
 				var url = 'title=' + res.title +
-						'&poster=' + res.backdrop_path +
-						'&desc=' + res.overview +
-						'&year=' + res.release_date.substring(0, 4);
+					'&poster=' + res.backdrop_path +
+					'&desc=' + res.overview +
+					'&year=' + res.release_date.substring(0, 4);
 
 				var newUrl = Base64.encode(url);
 
@@ -134,7 +126,7 @@
 		});
 	}
 
-	$('document').ready(function () {
+	$('document').ready(function() {
 		makeMovieCall();
 
 		$('#search_form').css({
@@ -144,7 +136,7 @@
 			'height': '0px',
 		});
 
-		$('#cancel').on('click', function () {
+		$('#cancel').on('click', function() {
 			$('.movie-desc').css({
 				'display': 'none',
 			});
@@ -160,7 +152,7 @@
 			});
 		})
 
-		$('#search_btn').on('click', function () {
+		$('#search_btn').on('click', function() {
 			if (i == 0) {
 				$('#search_form').css({
 					'display': 'block',
@@ -180,7 +172,7 @@
 			}
 		});
 
-		document.getElementById("search").addEventListener("input", function () {
+		document.getElementById("search").addEventListener("input", function() {
 			if ($('#search').val() === '') {
 				makeMovieCall();
 			} else {
@@ -191,7 +183,7 @@
 					data: JSON.stringify(data),
 					contentType: 'application/json',
 					url: '/movie/search',
-					success: function (res) {
+					success: function(res) {
 						console.log(res);
 						$('.gala').html(res);
 					}
@@ -199,5 +191,4 @@
 			}
 		});
 	});
-
 </script>
