--- a/views/home.hbs
+++ b/views/home.hbs
@@ -14,16 +14,18 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
-					<a class="nav-link" href="/">home<span class="sr-only">(current)</span></a>
-				</li>
-			</ul>
-			<ul class="navbar-nav">
-				<li class="nav-item active">
 					<a class="nav-link" href="/logout">logout<span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
 			<ul class="navbar-nav">
-				<img src="/images/search.svg" id="search_btn">
+				<li class="nav-item active">
+					<a class="nav-link" href="/profile/update">settings<span class="sr-only">(current)</span></a>
+				</li>
+			</ul>
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<img src="/images/search.svg" id="search_btn">
+				</li>
 			</ul>
 		</div>
 	</nav>
@@ -144,10 +146,10 @@
 				'display': 'none',
 			});
 			$('.container').css({
-				'display': 'block',
+				'display': 'none',
 			});
 			$('.head').css({
-				'height': '106px',
+				'height': '0px',
 			});
 			$('.movie-desc').css({
 				'width': '0',
