--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,7 +8,7 @@
 		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<a class="navbar-brand" href="/home"><img src="/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
+		<a class="navbar-brand" href="/user/profile"><img src="/images/avatar.png" width="40" height="40" class="d-inline-block align-top" alt=""></a>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
@@ -26,6 +26,7 @@
 				</li>
 			</ul>
 		</div>
+		{{!-- <div class="profile_icon"></div> --}}
 	</nav>
 	<div class="container">
 		<form id="search_form" action="/movie/search" method="POST">
@@ -79,7 +80,7 @@
 	function func(e) {
 		var year = $(e).find($('.year')).html(),
 			title = $(e).find($('.movie-title')).html();
-			console.log('------> ' + title);
+		console.log('------> ' + title);
 		var data = {};
 		data.title = title;
 
