--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
 	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
-	<a class="navbar-brand" href="#"><img src="/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
+	<a class="navbar-brand" href="#"><img src="/images/avatar.png" width="40" height="40" class="d-inline-block align-top" alt=""></a>
 	<div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav">
 			<li class="nav-item active">
