--- a/views/video.hbs
+++ b/views/video.hbs
@@ -30,7 +30,7 @@
 <div class="main">
 	<div class='player'>
 		<video poster="" id="videoPlayer" class="video-js vjs-default-skin vjs-fill" controls preload="metadata">
-			<source src="http://localhost:8080/video/335983" type="video/mp4">
+			<source src="http://localhost:8080/video" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
 	</div>
@@ -107,7 +107,7 @@
 	var i = 0;
 
 	$('document').ready(function () {
-		var encodedUrl = document.location.search;
+		var encodedUrl = document.location.search.replace("info=", "");
 
 		var decodedUrl = Base64.decode(encodedUrl);
 		var query = getQueryParams(decodedUrl);
