--- a/public/stylesheets/video.css
+++ b/public/stylesheets/video.css
@@ -2,148 +2,94 @@ body {
 	background-color: black !important;
 }
 
-b, strong {
-    font-weight: 700 !important;
-    color: #FF9900 !important;
+h4 {
+	color: black !important;
 }
 
-.post .post-description .stats .stat-item {
-	background-color: #FF9900 !important; 
-	border: 1px solid #FF9900 !important;
-    display: inline-block !important;
-	margin-right: 15px !important;
-	font-weight: bold !important;
+#sortable {
+	color: black;
 }
-
-.post .post-description .stats .stat-item:hover {
-	background-color: rgb(255, 255, 255) !important; 
-	border: 1px solid rgb(255, 255, 255) !important;
-    display: inline-block !important;
-	margin-right: 15px !important;
-	font-weight: bold !important;
-}
-
-.post .post-description p {
-	color: #FF9900;
-}
-
 .container {
-	top: 40px;
-}
-
-.col-sm-8 {
+	/* padding: 25px; */
 	margin: auto;
+	position: relative;
+	left: auto;
+	right: 0;
+	top: 0;
+	bottom: 0;
+}
+li.ui-state-default{
+	background:#fff0;
+	border:none;
+	border-bottom:1px solid #ddd;
+	text-align: left;
+	padding-bottom: 10px;
 }
 
-.panel {
-	background-color: black !important;
-	border: 1px solid #FF9900 !important;
+li.ui-state-default:last-child{
+	border-bottom:none;
 }
 
-.panel-shadow {
-    box-shadow: rgba(0, 0, 0, 0.3) 7px 7px 7px;
-}
-.panel-white {
-  border: 1px solid #dddddd;
-}
-.panel-white  .panel-heading {
-  color: #333;
-  background-color: #fff;
-  border-color: #ddd;
-}
-.panel-white  .panel-footer {
-  background-color: #fff;
-  border-color: #ddd;
+@import url(http://fonts.googleapis.com/css?family=Roboto:400);
+body {
+background-color:#fff;
+-webkit-font-smoothing: antialiased;
+font: normal 14px Roboto,arial,sans-serif;
 }
 
-.post .post-heading {
-  height: 95px;
-  padding: 20px 15px;
-}
-.post .post-heading .avatar {
-  width: 60px;
-  height: 60px;
-  display: block;
-  margin-right: 15px;
-}
-.post .post-heading .meta .title {
-  margin-bottom: 0;
-}
-.post .post-heading .meta .title a {
-  color: black;
-}
-.post .post-heading .meta .title a:hover {
-  color: #aaaaaa;
-}
-.post .post-heading .meta .time {
-  margin-top: 8px;
-  color: #999;
-}
-.post .post-image .image {
-  width: 100%;
-  height: auto;
-}
-.post .post-description {
-  padding: 15px;
-}
-.post .post-description p {
-  font-size: 14px;
-}
-.post .post-description .stats {
-  margin-top: 20px;
-}
-.post .post-description .stats .stat-item {
-  display: inline-block;
-  margin-right: 15px;
-}
-.post .post-description .stats .stat-item .icon {
-  margin-right: 8px;
-}
-.post .post-footer {
-  border-top: 1px solid #ddd;
-  padding: 15px;
-}
-.post .post-footer .input-group-addon a {
-  color: #454545;
-}
-.post .post-footer .comments-list {
-  padding: 0;
-  margin-top: 20px;
-  list-style-type: none;
-}
-.post .post-footer .comments-list .comment {
-  display: block;
-  width: 100%;
-  margin: 20px 0;
-}
-.post .post-footer .comments-list .comment .avatar {
-  width: 35px;
-  height: 35px;
-}
-.post .post-footer .comments-list .comment .comment-heading {
-  display: block;
-  width: 100%;
-}
-.post .post-footer .comments-list .comment .comment-heading .user {
-  font-size: 14px;
-  font-weight: bold;
-  display: inline;
-  margin-top: 0;
-  margin-right: 10px;
-}
-.post .post-footer .comments-list .comment .comment-heading .time {
-  font-size: 12px;
-  color: #aaa;
-  margin-top: 0;
-  display: inline;
-}
-.post .post-footer .comments-list .comment .comment-body {
-  margin-left: 50px;
-}
-.post .post-footer .comments-list .comment > .comments-list {
-  margin-left: 50px;
+.btn,.form-control,.well {
+	border-radius:1px;
+	box-shadow:0 0 0;
 }
 
+.form-control {
+	border-color:#d7d7d7;
+}
+
+.btn-primary {
+	border-color:transparent;
+}
+
+.btn-primary, .list-group-item.active:focus {
+	background-color:#4285f4;
+} 
+
+.btn-plus {
+	background-color:#ffffff;
+	border-width:1px;
+	border-color:#dddddd;
+	box-shadow:1px 1px 0 #999999;
+	border-radius:3px;color:#666666;
+	text-shadow:0 0 1px #bbbbbb;
+}
+
+.well,.panel {
+	border-color:#d2d2d2;
+	box-shadow:0 1px 0 #cfcfcf;
+	border-radius:3px;
+}
+
+hr {
+border-color:#ececec;
+}
+
+button {
+outline: 0;
+}
+
+.btn span{
+color:#666666;
+}
+
+.list-group-item:first-child,.list-group-item:last-child {
+border-radius:0;
+}
+
+h3 { 
+border:0 solid #efefef; 
+border-bottom-width:1px;
+padding-bottom:10px;
+}
 
 * {
 	outline: none !important;
@@ -174,6 +120,10 @@ b, strong {
 	position: relative;
 	z-index: 0;
 }
+
+.col-lg-4 {
+	margin: auto;
+	}
 
 .collapse {
 	background-color: #ff9900;
