--- a/views/video.hbs
+++ b/views/video.hbs
@@ -6,7 +6,7 @@
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
+<!--- Include the above in your HEAD tag --->
 
 
 <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
@@ -39,92 +39,65 @@
 		<h2>Title</h2>
 		<p></p>
 		<div class="container">
-			<div class="row">
-				<div class="col-sm-8">
-					<div class="panel panel-white post panel-shadow">
-						<div class="post-heading">
-							<div class="pull-left image">
-								<img src="http://bootdey.com/img/Content/user_1.jpg" class="img-circle avatar" alt="user profile image">
-							</div>
-							<div class="pull-left meta">
-								<div class="title h5">
-									<a href="#"><b>Ryan Haywood</b></a>
-									made a post.
-								</div>
-								<h6 class="text-muted time">1 minute ago</h6>
-							</div>
-						</div> 
-						<div class="post-description"> 
-							<p>Bootdey is a gallery of free snippets resources templates and utilities for bootstrap css hmtl js framework. Codes for developers and web designers</p>
-							<div class="stats">
-								<a href="#" class="btn btn-default stat-item">
-									<i class="fa fa-thumbs-up icon"></i>2
-								</a>
-								<a href="#" class="btn btn-default stat-item">
-									<i class="fa fa-thumbs-down icon"></i>12
-								</a>
-							</div>
-						</div>
+			<div class="col-lg-4 col-sm-6 text-center">
+				<div class="well">
+					<h4>What is on your mind?</h4>
+					<div class="input-group">
+						<input type="text" id="userComment" class="form-control input-sm chat-input" placeholder="Write your message here..." />
+						<span class="input-group-btn" onclick="addComment()">
+							<a href="#" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-comment"></span> Add Comment</a>
+						</span>
 					</div>
-				</div>
-				<div class="col-sm-8">
-					<div class="panel panel-white post panel-shadow">
-						<div class="post-heading">
-							<div class="pull-left image">
-								<img src="http://bootdey.com/img/Content/user_1.jpg" class="img-circle avatar" alt="user profile image">
-							</div>
-							<div class="pull-left meta">
-								<div class="title h5">
-									<a href="#"><b>Ryan Haywood</b></a>
-									made a post.
-								</div>
-								<h6 class="text-muted time">1 minute ago</h6>
-							</div>
-						</div> 
-						<div class="post-description"> 
-							<p>Bootdey is a gallery of free snippets resources templates and utilities for bootstrap css hmtl js framework. Codes for developers and web designers</p>
-							<div class="stats">
-								<a href="#" class="btn btn-default stat-item">
-									<i class="fa fa-thumbs-up icon"></i>2
-								</a>
-								<a href="#" class="btn btn-default stat-item">
-									<i class="fa fa-thumbs-down icon"></i>12
-								</a>
-							</div>
-						</div>
-					</div>
+					<hr data-brackets-id="12673">
+					<ul data-brackets-id="12674" id="sortable" class="list-unstyled ui-sortable">
+						<strong class="pull-left primary-font">James</strong>
+						<small class="pull-right text-muted">
+							<span class="glyphicon glyphicon-time"></span>7 mins ago</small>
+						</br>
+						<li class="ui-state-default">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+							incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+							nisi ut aliquip ex ea commodo consequat. </li>
+						</br>
+						<strong class="pull-left primary-font">Taylor</strong>
+						<small class="pull-right text-muted">
+							<span class="glyphicon glyphicon-time"></span>14 mins ago</small>
+						</br>
+						<li class="ui-state-default">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+							fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+							anim id est laborum.</li>
+					</ul>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
-<div class="footer">
-	<p>Footer</p>
-</div>
 
-<script>
-	var player = videojs('videoPlayer');
-	var i = 0;
+	<div class="footer">
+		<p>Footer</p>
+	</div>
 
-	$('document').ready(function () {
-		var encodedUrl = document.location.search;
+	<script>
+		var player = videojs('videoPlayer');
+		var i = 0;
 
-		var decodedUrl = Base64.decode(encodedUrl);
-		var query = getQueryParams(decodedUrl);
+		$('document').ready(function () {
+			var encodedUrl = document.location.search;
 
-		player.poster('https://image.tmdb.org/t/p/w500' + query.poster);
+			var decodedUrl = Base64.decode(encodedUrl);
+			var query = getQueryParams(decodedUrl);
 
-		$('.vid_desc').find('h2').html(query.title);
-		$('.vid_desc').find('p').html(query.desc);
+			player.poster('https://image.tmdb.org/t/p/w500' + query.poster);
 
-//		Make fullscrenn border 0px;
+			$('.vid_desc').find('h2').html(query.title);
+			$('.vid_desc').find('p').html(query.desc);
 
-//		if (window.innerHeight == screen.height) {
-//			console.log("Comparison works");
-//			$('#videoPlayer').css({
-//				'border': '0px',
-//			});
-//		}
-	})
+			//		Make fullscrenn border 0px;
 
-</script>
+			//		if (window.innerHeight == screen.height) {
+			//			console.log("Comparison works");
+			//			$('#videoPlayer').css({
+			//				'border': '0px',
+			//			});
+			//		}
+		})
+
+	</script>
