--- a/views/profile_update.hbs
+++ b/views/profile_update.hbs
@@ -6,20 +6,18 @@
 <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
 <!-- <script src="/javascripts/validate.js" charset="utf-8"></script> -->
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav"
-		 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<a class="navbar-brand" href="/home"><img src="/images/logo.png" width="30" height="30" class="d-inline-block align-top"
-			 alt=""></a>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav">
-				<li class="nav-item active">
-					<a class="nav-link" href="/logout">logout<span class="sr-only">(current)</span></a>
-				</li>
-			</ul>
-		</div>
-	</nav>
+	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<a class="navbar-brand" href="/home"><img src="/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
+	<div class="collapse navbar-collapse" id="navbarNav">
+		<ul class="navbar-nav">
+			<li class="nav-item active">
+				<a class="nav-link" href="/logout">logout<span class="sr-only">(current)</span></a>
+			</li>
+		</ul>
+	</div>
+</nav>
 <div class="container">
 	<div class="row">
 		<div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
@@ -104,13 +102,13 @@
 						<button id="submit" class="btn btn-lg btn-primary btn-block" type="submit"> <span>save changes</span> </button>
 
 						<a href="/home" class="btn-block"><button id="cancel" class="btn btn-lg btn-primary btn-block" type="button"> <span>cancel</span> </button></a>
+						<input type="text" style="display:none" name="" value="">
 					</form>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-
 <script>
 	var tex = '';
 	$(document).ready(function() {
@@ -143,6 +141,8 @@
 			}
 		})
 
+
+
 		$('.form-control').on('input', function() {
 			var firstname = $('#firstname').val(),
 				lastname = $('#lastname').val(),
@@ -155,14 +155,44 @@
 			var regU = /^[a-z0-9_]+$/i;
 			var regem = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
 
+
+			if (this.name === 'email' && email && email.match(regem)) {
+				console.log(this.value);
+				var data = {};
+				data.email = this.value;
+				$.ajax({
+					type: 'POST',
+					data: JSON.stringify(data),
+					contentType: 'application/json',
+					url: '/user/update/email',
+					success: function(res) {
+						console.log(res)
+					}
+				});
+			}
+			if (this.name === 'username' && username && username.match(regU)) {
+				console.log(this.value);
+				var data = {};
+				data.username = this.value;
+				$.ajax({
+					type: 'POST',
+					data: JSON.stringify(data),
+					contentType: 'application/json',
+					url: '/user/update/username',
+					success: function(res) {
+						console.log(res)
+					}
+				});
+			}
 			if (firstname && !firstname.match(reg))
 				tex += '- only letters on firstname field<br>';
 			if (lastname && !lastname.match(reg))
 				tex += '- only letters on lastname field<br>';
 			if (username && !username.match(regU))
 				tex += '- only numbers, letters and underscore on username field<br>';
-			if (email && !email.match(regem))
+			if (email && !email.match(regem)) {
 				tex += '- email should have formart login@domain.ext<br>';
+			}
 			if (p1 && p1.length < 6)
 				tex += '- password too short<br>';
 			if (p2 && !(p1 == p2))
