--- a/public/stylesheets/video.css
+++ b/public/stylesheets/video.css
@@ -2,8 +2,45 @@ body {
     background-color: black !important;
 }
 
+i {
+    border: 1px solid #FF9900;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+}
+
+i:hover {
+    transform: scale(2);
+    scroll-behavior: smooth;
+}
+
+.up {
+    padding: 13px;
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+}
+
+.up:hover {
+    transition: 0.5s;
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+    padding: 23px;
+}
+
+.back-to-top_1 {
+    z-index: 3;
+    position: fixed;
+    top: 90vh;
+    width: 100%;
+    margin-left: -5%;
+}
+
 * {
     font-family: Consolas;
+}
+
+.comment-btn {
+    background-color: #FF9900 !important;
+    border: 1px solid #FF9900 !important;
 }
 
 h4 {
@@ -32,10 +69,15 @@ h4 {
 
 .container {
     top: 40px;
+    border-left: 1px solid #FF9900 !important;
+    border-right: 1px solid #FF9900 !important;
+    background-color: rgb(39, 39, 39) !important;
+    overflow: auto;
 }
 
 .col-sm-8 {
     margin: auto;
+    width: 100% !important;
 }
 
 .panel {
@@ -171,10 +213,21 @@ h4 {
     margin-left: 50px;
 }
 
+.row {
+    margin-bottom: 20px;
+}
+
 * {
     outline: none !important;
 }
 
+.name-b {
+    color: #FF9900;
+}
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
 /* .comment_form {
 
 } */
@@ -198,6 +251,7 @@ h4 {
 .containers {
     position: relative;
     z-index: 0;
+
 }
 
 .col-lg-4 {
