--- a/views/video.hbs
+++ b/views/video.hbs
@@ -1,35 +1,36 @@
 <title>yesus</title>
 <link rel="stylesheet" href="/stylesheets/video.css">
 <link href="https://vjs.zencdn.net/7.3.0/video-js.css" rel="stylesheet">
-<script src="https://vjs.zencdn.net/7.3.0/video.js"></script>
-<!-- Font Awesome -->
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
+<script src="https://vjs.zencdn.net/7.3.0/video.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!-- Font Awesome -->
+<!--- Include the above in your HEAD tag --->
 {{!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
  crossorigin="anonymous"> --}}
-
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!--- Include the above in your HEAD tag --->
-
-
-<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-<link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
+{{!-- <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"> --}}
 <!-- <link rel="stylesheet" href="/stylesheets/home.css"> -->
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav"
-	 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-	<a class="navbar-brand" href="#"><img src="/images/logo.png" width="30" height="30" class="d-inline-block align-top"
-		 alt=""></a>
-	<div class="collapse navbar-collapse" id="navbarNav">
-		<ul class="navbar-nav">
-			<li class="nav-item active">
-				<a class="nav-link" href="/home">home<span class="sr-only">(current)</span></a>
-			</li>
-		</ul>
-	</div>
-</nav>
+
+<div class="head">
+	<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav"
+		 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<a class="navbar-brand" href="/user/profile"><img src="/images/avatar.png" width="40" height="40" class="d-inline-block align-top"
+			 alt=""></a>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="/logout">logout<span class="sr-only">(current)</span></a>
+				</li>
+			</ul>
+		</div>
+		{{!-- <div class="profile_icon"></div> --}}
+	</nav>
+</div>
 <div class="main">
 	<div class='player'>
 		<video poster="" id="videoPlayer" class="video-js vjs-default-skin vjs-fill" controls preload="metadata">
@@ -60,7 +61,7 @@
 		</div>
 	</div>
 </div>
-<div  class="back-to-top_1 text-right" id="myBtn">
+<div class="back-to-top_1 text-right" id="myBtn">
 	<a href="#" class="btn-block"><i class="arrow up"></i></a>
 </div>
 <div class="footer">
@@ -72,7 +73,9 @@
 	var i = 0;
 	var query;
 
-	window.onscroll = function() {scrollFunction()};
+	window.onscroll = function () {
+		scrollFunction()
+	};
 
 
 	function getComments() {
@@ -127,7 +130,7 @@
 				contentType: 'application/json',
 				url: '/comments',
 				success: function (res) {
-//					$('.com-boxes').html(res);
+					//					$('.com-boxes').html(res);
 				}
 			})
 			getComments();
@@ -135,11 +138,12 @@
 	})
 
 
-function scrollFunction() {
-    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-        document.getElementById("myBtn").style.display = "block";
-    } else {
-        document.getElementById("myBtn").style.display = "none";
-    }
-}
+	function scrollFunction() {
+		if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+			document.getElementById("myBtn").style.display = "block";
+		} else {
+			document.getElementById("myBtn").style.display = "none";
+		}
+	}
+
 </script>
