--- a/views/home.hbs
+++ b/views/home.hbs
@@ -12,12 +12,12 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
-					<a class="nav-link" href="/logout">logout<span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="/logout">Logout<span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
 			<ul class="navbar-nav">
 				<li class="nav-item active">
-					<a class="nav-link" href="/profile/update">settings<span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="/user/profile">Profile<span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
 			<ul class="navbar-nav">
